--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -53,20 +53,18 @@ button:hover {
 /* you can set a style on hover for any module like this */
 
 #workspaces button {
-    padding: 0 5px;
+    padding: 5px 15px 5px 10px;
     background-color: #E3E3E3;
-    color: #ffffff;
+    color: #000;
     border: 1px solid #C9282D;
-    border-radius: 15px;
+    border-radius: 20px;
+    margin: 0 5px;
 }
 
-#workspaces button:hover {
-    background: rgba(0, 0, 0, 0.2);
-}
-
-#workspaces button.focused {
-    background-color: #64727D;
-    box-shadow: inset 0 -3px #ffffff;
+#workspaces button.active {
+    background-color: #C9282D;
+    color: #E3E3E3;
+    border: 1px solid #000;
 }
 
 #workspaces button.urgent {
@@ -105,7 +103,7 @@ button:hover {
 
 #window,
 #workspaces {
-    margin: 0 4px;
+    margin: 0 20px;
 }
 
 /* If workspaces is the leftmost module, omit left margin */
@@ -121,11 +119,6 @@ button:hover {
 #battery {
     background-color: #e3e3e3;
     color: #000000;
-}
-
-#battery.charging, #battery.plugged {
-    color: #ffffff;
-    background-color: #26A65B;
 }
 
 @keyframes blink {
@@ -171,11 +164,6 @@ label:focus {
 
 #network.disconnected {
     background-color: #f53c3c;
-}
-
-#pulseaudio.muted {
-    background-color: #90b1b1;
-    color: #2a5c45;
 }
 
 #wireplumber {
@@ -283,4 +271,6 @@ label:focus {
 #privacy-item.audio-out {
     background-color: #0069d4;
 }
+
+
 
