--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -1,7 +1,4 @@
-/* Colors:  */
-/* --primary: #C9282D; */
-/* --secondary: #E3E3E3; */
-/* --background: #0F1212; */
+@import "./rose-pine.css";
 
 * {
     /* `otf-font-awesome` is required to be installed for icons */
@@ -10,41 +7,25 @@
 }
 
 window#waybar {
-    color: #ffffff;
-    background-color: transparent;
+    color: @text;
+    background-color: @base;
 }
 
 window#waybar.hidden {
     opacity: 0.2;
 }
 
-window#waybar.termite {
-    background-color: #3F3F3F;
-}
-
-window#waybar.chromium {
-    background-color: #000000;
-    border: none;
-}
-
-/* Use box-shadow instead of border so the text isn't offset */
-/* button { */
-/*     box-shadow: inset 0 -3px transparent; */
-/*     border: none; */
-/*     border-radius: 0; */
-/* } */
-
 #workspaces button {
     padding: 5px 15px 5px 10px;
-    background-color: #E3E3E3;
-    color: #000;
-    border: 1px solid #C9282D;
+    background-color: @subtle;
+    color: @text;
+    border: 1px solid @love;
     border-radius: 20px;
     margin: 0 5px;
 }
 
 #workspaces button.active {
-    background-color: #C9282D;
+    background-color: @overlay;
     color: #E3E3E3;
     border: 1px solid #000;
 }
@@ -73,9 +54,9 @@ window#waybar.chromium {
 #mpd {
     padding: 5px 15px 5px 10px;
     color: #000;
-    background-color: #e3e3e3;
+    background-color: @overlay;
     border-radius: 15px;
-    border: 1px solid #C9282D;
+    border: 1px solid @love;
 
 }
 
@@ -108,8 +89,7 @@ window#waybar.chromium {
 
 /* Using steps() instead of linear as a timing function to limit cpu usage */
 #battery.critical:not(.charging) {
-    background-color: #C9282D;
-    color: #ffffff;
+    background-color: @love;
     animation-name: blink;
     animation-duration: 0.5s;
     animation-timing-function: steps(12);
@@ -122,22 +102,8 @@ window#waybar.chromium {
 }
 
 #power-profiles-daemon.performance {
-    background-color: #f53c3c;
-    color: #ffffff;
-}
-
-#power-profiles-daemon.balanced {
-    background-color: #2980b9;
-    color: #ffffff;
-}
-
-#power-profiles-daemon.power-saver {
-    background-color: #2ecc71;
-    color: #000000;
-}
-
-label:focus {
-    background-color: #000000;
+    background-color: @love;
+    color: @text;
 }
 
 #wireplumber {
