--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -1,38 +1,31 @@
 @import "./rose-pine.css";
 
 * {
-    /* `otf-font-awesome` is required to be installed for icons */
-    font-family: FiraCode Nerd Font, Roboto, Helvetica, Arial, sans-serif;
-    font-size: 14px;
-}
-
-window#waybar {
-    color: @text;
-    background-color: @base;
+  /* `otf-font-awesome` is required to be installed for icons */
+  font-family: FiraCode Nerd Font, Roboto, Helvetica, Arial, sans-serif;
+  font-size: 13px;
 }
 
 window#waybar.hidden {
-    opacity: 0.2;
+  opacity: 0.2;
+}
+
+#workspaces {
+  border-radius: 10px;
+  margin-top: 5px;
+  padding: 5px;
 }
 
 #workspaces button {
-    padding: 5px 15px 5px 10px;
-    background-color: @subtle;
-    color: @text;
-    border: 1px solid @love;
-    border-radius: 20px;
-    margin: 0 5px;
+  color: @muted;
 }
 
 #workspaces button.active {
-    background-color: @overlay;
-    color: #E3E3E3;
-    border: 1px solid #000;
+  color: @text;
 }
 
-#mode {
-    background-color: #64727D;
-    box-shadow: inset 0 -3px #ffffff;
+#workspaces button:hover {
+  border: none;
 }
 
 #clock,
@@ -41,38 +34,42 @@ window#waybar.hidden {
 #memory,
 #disk,
 #temperature,
-#backlight,
 #network,
 #pulseaudio,
-#wireplumber,
-#custom-media,
-#tray,
-#mode,
-#idle_inhibitor,
-#scratchpad,
-#power-profiles-daemon,
-#mpd {
-    padding: 5px 15px 5px 10px;
-    color: #000;
-    background-color: @overlay;
-    border-radius: 15px;
-    border: 1px solid @love;
-
+#tray {
+  padding: 0 7px 0 7px;
 }
 
-#window,
-#workspaces {
-    margin: 0 20px;
+#clock {
+  color: @gold;
+  padding: 0 7px 0 7px;
+  margin-left: 5px;
+}
+
+#pulseaudio {
+  color: @love;
+}
+
+#cpu {
+  color: @gold;
+}
+
+#memory {
+  color: @iris;
+}
+
+#temperature {
+  color: @rose;
 }
 
 /* If workspaces is the leftmost module, omit left margin */
-.modules-left > widget:first-child > #workspaces {
-    margin-left: 0;
+.modules-left > widget:first-child {
+    margin-left: 5px;
 }
 
 /* If workspaces is the rightmost module, omit right margin */
-.modules-right > widget:last-child > #workspaces {
-    margin-right: 0;
+.modules-right > widget:last-child {
+    margin-right: 10px;
 }
 
 #battery {
@@ -89,126 +86,28 @@ window#waybar.hidden {
 
 /* Using steps() instead of linear as a timing function to limit cpu usage */
 #battery.critical:not(.charging) {
-    background-color: @love;
-    animation-name: blink;
-    animation-duration: 0.5s;
-    animation-timing-function: steps(12);
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
-}
-
-#power-profiles-daemon {
-    padding-right: 15px;
-}
-
-#power-profiles-daemon.performance {
-    background-color: @love;
-    color: @text;
+  background-color: @love;
+  animation-name: blink;
+  animation-duration: 0.5s;
+  animation-timing-function: steps(12);
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
 }
 
 #wireplumber {
-    background-color: #fff0f5;
-    color: #000000;
+  background-color: #fff0f5;
+  color: #000000;
 }
 
 #wireplumber.muted {
-    background-color: #f53c3c;
-}
-
-#custom-media {
-    background-color: #66cc99;
-    color: #2a5c45;
-    min-width: 100px;
-}
-
-#custom-media.custom-spotify {
-    background-color: #66cc99;
-}
-
-#custom-media.custom-vlc {
-    background-color: #ffa000;
+  background-color: @love;
 }
 
 #temperature.critical {
-    background-color: #eb4d4b;
+  background-color: @love;
 }
 
-#tray > .passive {
-    -gtk-icon-effect: dim;
-}
-
-#tray > .needs-attention {
-    -gtk-icon-effect: highlight;
-    background-color: #eb4d4b;
-}
-
-#idle_inhibitor.activated {
-    background-color: #ecf0f1;
-    color: #2d3436;
-}
-
-#mpd.disconnected {
-    background-color: #f53c3c;
-}
-
-#mpd.stopped {
-    background-color: #90b1b1;
-}
-
-#mpd.paused {
-    background-color: #51a37a;
-}
-
-#language {
-    background: #00b093;
-    color: #740864;
-    padding: 0 5px;
-    margin: 0 5px;
-    min-width: 16px;
-}
-
-#keyboard-state {
-    background: #97e1ad;
-    color: #000000;
-    padding: 0 0px;
-    margin: 0 5px;
-    min-width: 16px;
-}
-
-#keyboard-state > label {
-    padding: 0 5px;
-}
-
-#keyboard-state > label.locked {
-    background: rgba(0, 0, 0, 0.2);
-}
-
-#scratchpad {
-    background: rgba(0, 0, 0, 0.2);
-}
-
-#scratchpad.empty {
-	background-color: transparent;
-}
-
-#privacy {
-    padding: 0;
-}
-
-#privacy-item {
-    padding: 0 5px;
-    color: white;
-}
-
-#privacy-item.screenshare {
-    background-color: #cf5700;
-}
-
-#privacy-item.audio-in {
-    background-color: #1ca000;
-}
-
-#privacy-item.audio-out {
-    background-color: #0069d4;
+#custom-power {
+  margin-right: 10px;
 }
 
