--- a/qutebrowser/styles/youtube.css
+++ b/qutebrowser/styles/youtube.css
@@ -1,20 +1,23 @@
 /* cosmetic and focus tweaks for yt */
 /* credit to various userstyles makers for some pieces of this */
 
-/* grid view */
-#items.ytd-grid-renderer>ytd-grid-video-renderer:has(ytd-thumbnail-overlay-time-status-renderer[overlay-style="SHORTS"]) {
-  display: none;
-}
-
-/* list view */
-ytd-item-section-renderer:not(:has(ytd-grid-renderer)):has(ytd-thumbnail-overlay-time-status-renderer[overlay-style="SHORTS"]) {
-  display: none; 
-}
-
-/* hide recs */
-#secondary {
+#content.style-scope.ytd-rich-section-renderer {
   display: none !important;
 }
+/**/
+/* grid view */
+/* #items.ytd-grid-renderer>ytd-grid-video-renderer:has(ytd-thumbnail-overlay-time-status-renderer[overlay-style="SHORTS"]) { */
+/*   display: none !important; */
+/* } */
+/**/
+/* /* list view */ */
+/* ytd-item-section-renderer:not(:has(ytd-grid-renderer)):has(ytd-thumbnail-overlay-time-status-renderer[overlay-style="SHORTS"]) { */
+/*   display: none !important;  */
+/* } */
+
+/* #secondary { */
+/*   display: none !important; */
+/* } */
 
 /* make video fill the remaining space */
 #primary {
@@ -23,45 +26,8 @@ ytd-item-section-renderer:not(:has(ytd-grid-renderer)):has(ytd-thumbnail-overlay
     max-width: none !important;
 }
 
-/* hide yt sidebar */
-ytd-mini-guide-renderer, 
-ytd-guide-renderer {
-  display: none !important;
-}
-
 /* hide yt top bar */
-.ytd-masthead {
-  margin: 0 !important;
-  display: none !important;
-}
-
-/* remove extra padding and ensure content is full-width on channel page*/
-.ytd-app {
-  margin-top: 0 !important;
-  padding-top: 0 !important;
-  margin-left: 0 !important;
-}
-
-html:not(.ytd-watch-flexy) ytd-watch-flexy[flexy] #player {
-  width: 100% !important;
-  max-width: 1400px;
-  margin: 0 auto !important;
-}
-
-/* remove that annoying thing yt adds in dark mode */
-.ytp-gradient-bottom {
-  display: none !important;
-}
-
-/* reshape some elements */
-.chip-container {
-  border-radius: 0% !important;
-}
-
-.ytd-thumbnail {
-  border-radius: 10% !important;
-}
-
-.yt-spec-avatar-shape__image {
-  border-radius: 10% !important;
-}
+/* .ytd-masthead { */
+/*   margin: 0 !important; */
+/*   display: none !important; */
+/* } */
